force-app/main/default/objects/QATestScriptDefect__c/QATestScriptDefect__c.object-meta.xml
<CustomObject>
    <label>QATestScriptDefect</label>
    <nameField>
        <label>QATestScriptDefect Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QATestScriptDefects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>