force-app/main/default/objects/QATestScriptDefect__c/fields/Defect_ID__c.field-meta.xml
<CustomField>
    <fullName>Defect_ID__c</fullName>
    <displayFormat>D-{0000}</displayFormat>
    <label>Defect ID</label>
    <type>AutoNumber</type>
</CustomField>