force-app/main/default/objects/QATestScriptDefect__c/fields/Defect_Status__c.field-meta.xml
<CustomField>
    <fullName>Defect_Status__c</fullName>
    <label>Defect Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Ready for QA</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Reopened</fullName>
            </value>
            <value>
                <fullName>Ready for UAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>