force-app/main/default/objects/QATestScriptDefect__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1 - Critical</fullName>
            </value>
            <value>
                <fullName>P2 - High</fullName>
            </value>
            <value>
                <fullName>P3 - Medium</fullName>
            </value>
            <value>
                <fullName>P4 - Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>