force-app/main/default/objects/QATestScriptDefect__c/fields/QATest_Script__c.field-meta.xml
<CustomField>
    <fullName>QATest_Script__c</fullName>
    <label>QATest Script</label>
    <referenceTo>QATest_Script__c</referenceTo>
    <relationshipLabel>QATestScriptDefects</relationshipLabel>
    <relationshipName>QATestScriptDefects</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>