force-app/main/default/objects/QATestScriptDefect__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S1 - Critical</fullName>
            </value>
            <value>
                <fullName>S2 - High</fullName>
            </value>
            <value>
                <fullName>S3 - Medium</fullName>
            </value>
            <value>
                <fullName>S4 - Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>