force-app/main/default/objects/QATestScriptDefect__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <label>User Story</label>
    <referenceTo>agf__ADM_Work__c</referenceTo>
    <relationshipLabel>Defects</relationshipLabel>
    <relationshipName>QATestScriptDefects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>